...
                                <rect key="frame" x="209.5" y="757" width="55" height="55"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <state key="normal" image="arrowtriangle.right.fill" catalog="system"/>
                                <connections>
                                    <action selector="showNextMarkerinSequence:" destination="bSR-U5-Ig6" eventType="touchUpInside" id="gT9-hz-kJo"/>
...
                                <rect key="frame" x="149.5" y="757" width="55" height="55"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <state key="normal" image="arrowtriangle.left.fill" catalog="system"/>
                                <connections>
                                    <action selector="showPrevMarkerInSequence:" destination="bSR-U5-Ig6" eventType="touchUpInside" id="szT-Nl-HQW"/>
...
                                    <constraint firstAttribute="height" constant="45" id="mt7-aB-0VR"/>
                                </constraints>
                                <state key="normal" image="line.horizontal.3" catalog="system"/>
                                <connections>
                                    <segue destination="KJH-cc-18q" kind="show" id="be4-S8-970"/>
...
                                    <constraint firstAttribute="width" constant="55" id="zmQ-cl-nl7"/>
                                </constraints>
                                <state key="normal" image="location.circle" catalog="system"/>
                                <connections>
                                    <action selector="userFocus:" destination="bSR-U5-Ig6" eventType="touchUpInside" id="wxI-kW-RMf"/>
...
                                    <constraint firstAttribute="height" constant="55" id="Gg4-PS-MM8"/>
                                </constraints>
                                <state key="normal" image="mappin" catalog="system"/>
                                <connections>
                                    <action selector="markerFocus:" destination="bSR-U5-Ig6" eventType="touchUpInside" id="gFZ-W4-Nj8"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Map" id="ZLO-Bz-yY1">
                        <barButtonItem key="leftBarButtonItem" title="Options" id="dzM-Cb-hTc"/>
                        <barButtonItem key="rightBarButtonItem" title="Legend" id="M9B-Ra-Rvg"/>
                    </navigationItem>
                    <nil key="simulatedTopBarMetrics"/>
                    <connections>
                        <outlet property="appMapView" destination="Abq-x1-K8v" id="Fet-Zn-WcR"/>
                        <outlet property="infoPanel" destination="elQ-iM-FiI" id="ym1-hp-zKf"/>
                        <outlet property="legendButton" destination="q48-dY-vDz" id="7i4-s2-ybp"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="All" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mdt-Df-Ytb">
                                                    <rect key="frame" x="356" y="12" width="19" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Options" id="sfn-bG-tZQ">
                        <barButtonItem key="leftBarButtonItem" title="Back to Map" id="KKe-Sl-ZQw">
                            <connections>
                                <segue destination="pRa-Wf-kVy" kind="unwind" unwindAction="backFromOptions:" id="jeV-gM-Sou"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="Select All">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
