...
    
    if (!appStateManager) {
        appStateManager = [[AppState alloc] initWithInstruments:instruments];
    }
    
    mapTypes = [[NSMutableDictionary alloc]initWithObjectsAndKeys:
                    @"Satellite with labels", [NSNumber numberWithInt:kGMSTypeHybrid],
                     @"Satellite", [NSNumber numberWithInt:kGMSTypeSatellite],
                     @"Standard", [NSNumber numberWithInt:kGMSTypeNormal],
                     @"Terrain", [NSNumber numberWithInt:kGMSTypeTerrain],
                     nil];
    
//    [FloatData runTests];
    
    return YES;
}
...
