...
/* Called when user clicks on the zoomToUser button */
- (IBAction)userFocus:(id)sender {
    switch ([CLLocationManager authorizationStatus]) {
        case kCLAuthorizationStatusDenied:
        case kCLAuthorizationStatusRestricted:
        {
            UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Location Permissions Denied" message:@"Enable in Settings -> Privacy -> Location"  preferredStyle:UIAlertControllerStyleAlert];
               
            UIAlertAction * alertButton = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:^(UIAlertAction *action){
                   [self.locationManager requestWhenInUseAuthorization];
               }];
               
            [alert addAction:alertButton];
            [self presentViewController:alert animated:YES completion:nil];
        }
...
